--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testmiscpage.config
@@ -40,6 +40,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>a290a9de-0b71-49b7-9572-0bf541525469</Key>
+      <Name>Data Picker - Umbraco Content</Name>
+      <Alias>dataPickerUmbracoContent</Alias>
+      <Definition>118e1656-eb6d-499a-bf81-46683f3d548c</Definition>
+      <Type>Umbraco.Community.Contentment.DataPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>10</SortOrder>
+      <Tab Alias="dataPicker">Data Picker</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>0ec1844a-2609-41af-a23c-e785fdef96e5</Key>
       <Name>Icon Picker</Name>
       <Alias>iconPicker</Alias>
@@ -153,6 +169,13 @@
     </GenericProperty>
   </GenericProperties>
   <Tabs>
+    <Tab>
+      <Key>d08808c6-3be8-454b-a646-67c2e30ff2c8</Key>
+      <Caption>Data Picker</Caption>
+      <Alias>dataPicker</Alias>
+      <Type>Tab</Type>
+      <SortOrder>-60</SortOrder>
+    </Tab>
     <Tab>
       <Key>7714882f-3f44-489d-ad10-471b5ead0723</Key>
       <Caption>Social Links</Caption>
