--- a/src/Umbraco.Cms.11.x/uSync/v9/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.11.x/uSync/v9/ContentTypes/testmiscpage.config
@@ -40,6 +40,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>fbe84bd7-9b14-464d-89a1-a79d404c38d4</Key>
+      <Name>Data Picker - Umbraco Content</Name>
+      <Alias>dataPickerUmbracoContent</Alias>
+      <Definition>5023550b-f4ae-4e05-94c6-79abc5266c23</Definition>
+      <Type>Umbraco.Community.Contentment.DataPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>10</SortOrder>
+      <Tab Alias="dataPicker/dataPicker">Data Picker</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>0ec1844a-2609-41af-a23c-e785fdef96e5</Key>
       <Name>Icon Picker</Name>
       <Alias>iconPicker</Alias>
@@ -138,6 +154,13 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>61cdc0fd-2bc2-442a-9c46-8ee1061144ea</Key>
+      <Caption>Data Picker</Caption>
+      <Alias>dataPicker/dataPicker</Alias>
+      <Type>Group</Type>
+      <SortOrder>0</SortOrder>
+    </Tab>
+    <Tab>
       <Key>73c9dae5-5ee7-4392-807a-7f7469dc8a8d</Key>
       <Caption>Textboxes</Caption>
       <Alias>textboxes</Alias>
@@ -150,6 +173,13 @@
       <Alias>socialLinks</Alias>
       <Type>Tab</Type>
       <SortOrder>-50</SortOrder>
+    </Tab>
+    <Tab>
+      <Key>b11b63ee-c80b-43fd-8048-108ea2e8d5cf</Key>
+      <Caption>Data Picker</Caption>
+      <Alias>dataPicker</Alias>
+      <Type>Tab</Type>
+      <SortOrder>-60</SortOrder>
     </Tab>
     <Tab>
       <Key>e1176c1d-7a9b-4cb7-b9f3-4b54e726573f</Key>
