--- a/src/Umbraco.Cms.8.x/uSync/v8/Content/test-misc.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/Content/test-misc.config
@@ -13,6 +13,12 @@
     <Template Key="32cf5caf-9267-4cf4-8327-2dcbd24a1cd7">testMiscPage</Template>
   </Info>
   <Properties>
+    <dataPickerUmbracoContent>
+      <Value><![CDATA[[
+  "umb://document/3f755f025f6e42cca7ea4b769e3232b2",
+  "umb://document/ddf45934719e4f178cd1384d3a5a0172"
+]]]></Value>
+    </dataPickerUmbracoContent>
     <iconPicker>
       <Value><![CDATA[icon-document color-black]]></Value>
     </iconPicker>
