--- a/src/Umbraco.Cms.8.x/uSync/v8/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/ContentTypes/testmiscpage.config
@@ -19,6 +19,22 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>22807a65-1f8c-43d4-a57e-6716a835c0ff</Key>
+      <Name>Data Picker - Umbraco Content</Name>
+      <Alias>dataPickerUmbracoContent</Alias>
+      <Definition>739accd7-cb4b-4e6b-9083-336fa25fd2f2</Definition>
+      <Type>Umbraco.Community.Contentment.DataPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>10</SortOrder>
+      <Tab Alias="dataPicker">Data Picker</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>29f14ac4-a520-4a4b-9fd5-378df0d1b84c</Key>
       <Name>Icon Picker</Name>
       <Alias>iconPicker</Alias>
@@ -116,6 +132,12 @@
     </GenericProperty>
   </GenericProperties>
   <Tabs>
+    <Tab>
+      <Caption>Data Picker</Caption>
+      <SortOrder>-60</SortOrder>
+      <Alias>dataPicker</Alias>
+      <Type>Tab</Type>
+    </Tab>
     <Tab>
       <Caption>Social Links</Caption>
       <SortOrder>-50</SortOrder>
