--- a/src/Umbraco.Cms.10.x/uSync/v10/Content/test-misc.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/Content/test-misc.config
@@ -16,6 +16,9 @@
     <dataListItems>
       <Value><![CDATA[[{"icon":"icon-stop color-red","name":"Ready","value":"ready","description":""},{"icon":"icon-stop color-amber","name":"Steady","value":"steady","description":""},{"icon":"icon-stop color-green","name":"Go","value":"go","description":""}]]]></Value>
     </dataListItems>
+    <dataPickerUmbracoContent>
+      <Value><![CDATA[["umb://document/b31b9022676544e795251f9aac85cc5f","umb://document/f584df3eeffe42698cf41366a03f4fff"]]]></Value>
+    </dataPickerUmbracoContent>
     <iconPicker>
       <Value><![CDATA[icon-science color-grey]]></Value>
     </iconPicker>
