--- a/src/Umbraco.Cms.11.x/uSync/v9/Content/test-misc.config
+++ b/src/Umbraco.Cms.11.x/uSync/v9/Content/test-misc.config
@@ -29,6 +29,12 @@
   }
 ]]]></Value>
     </dataListItems>
+    <dataPickerUmbracoContent>
+      <Value><![CDATA[[
+  "umb://document/b31b9022676544e795251f9aac85cc5f",
+  "umb://document/f584df3eeffe42698cf41366a03f4fff"
+]]]></Value>
+    </dataPickerUmbracoContent>
     <iconPicker>
       <Value><![CDATA[icon-science color-grey]]></Value>
     </iconPicker>
