Refactored `UmbracoContentDataListSource` to support DataPicker

--- a/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentDataPickerUmbracoContent.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentDataPickerUmbracoContent.config
@@ -7,22 +7,25 @@
     <Folder>Test+Data+Picker</Folder>
   </Info>
   <Config><![CDATA[{
-  "displayMode": [
-    "cards"
-  ],
   "dataSource": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.UmbracoContentDataPickerSource, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.UmbracoContentDataListSource, Umbraco.Community.Contentment",
       "value": {
         "parentNode": "umb://document/7c6bcf13fa7d4949b975ffb331ee0dcc"
       }
     }
   ],
-  "maxItems": 0,
-  "overlaySize": [
-    "medium"
+  "displayMode": [
+    {
+      "key": "Umbraco.Community.Contentment.DataEditors.CardsDataPickerDisplayMode, Umbraco.Community.Contentment",
+      "value": {}
+    }
   ],
   "pageSize": 12,
+  "overlaySize": [
+    "small"
+  ],
+  "maxItems": 0,
   "enableDevMode": "1"
 }]]></Config>
 </DataType>
