Testing DataPicker sources on Umbraco 8

--- a/src/Umbraco.Cms.8.x/uSync/v8/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/ContentTypes/testmiscpage.config
@@ -19,6 +19,70 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>33e5166d-6cc9-4802-8b92-dc9ef17483b3</Key>
+      <Name>Data Picker - .NET Countries</Name>
+      <Alias>dataPickerNETCountries</Alias>
+      <Definition>1cb46262-6e51-4b88-9e9d-11add95950a9</Definition>
+      <Type>Umbraco.Community.Contentment.DataPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>20</SortOrder>
+      <Tab Alias="dataPicker">Data Picker</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>f2c346fc-e679-4001-92ff-8dd9f7d130c4</Key>
+      <Name>Data Picker - .NET Currencies</Name>
+      <Alias>dataPickerNETCurrencies</Alias>
+      <Definition>bccc863f-fa29-4991-a085-d35f829910ad</Definition>
+      <Type>Umbraco.Community.Contentment.DataPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>21</SortOrder>
+      <Tab Alias="dataPicker">Data Picker</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>ca142035-ec93-4b5b-a53e-d96d620ea9e2</Key>
+      <Name>Data Picker - .NET Languages</Name>
+      <Alias>dataPickerNETLanguages</Alias>
+      <Definition>e390118b-475a-4977-a1ed-6d9f75609f37</Definition>
+      <Type>Umbraco.Community.Contentment.DataPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>22</SortOrder>
+      <Tab Alias="dataPicker">Data Picker</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>6ae52e25-ad4d-4eef-a345-736874610c5b</Key>
+      <Name>Data Picker - .NET Time Zones</Name>
+      <Alias>dataPickerNETTimeZones</Alias>
+      <Definition>7343d5d4-c67e-4ae0-8497-082dcff7a490</Definition>
+      <Type>Umbraco.Community.Contentment.DataPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>23</SortOrder>
+      <Tab Alias="dataPicker">Data Picker</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>22807a65-1f8c-43d4-a57e-6716a835c0ff</Key>
       <Name>Data Picker - Umbraco Content</Name>
       <Alias>dataPickerUmbracoContent</Alias>
@@ -28,6 +92,22 @@
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>10</SortOrder>
+      <Tab Alias="dataPicker">Data Picker</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>4b5047be-f118-4cdb-91cc-5171556d61ba</Key>
+      <Name>Data Picker - Umbraco Members</Name>
+      <Alias>dataPickerUmbracoMembers</Alias>
+      <Definition>6f0bf1c2-64df-403a-b665-be700c56196a</Definition>
+      <Type>Umbraco.Community.Contentment.DataPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>11</SortOrder>
       <Tab Alias="dataPicker">Data Picker</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
