ContentBlocks - reusable content, updates
`¯\_(ツ)_/¯`

--- a/src/Umbraco.Cms.12.x/uSync/v9/Content/else-1.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/Content/else-1.config
@@ -12,5 +12,15 @@
     <Schedule />
     <Template />
   </Info>
-  <Properties />
+  <Properties>
+    <heading>
+      <Value><![CDATA[]]></Value>
+    </heading>
+    <intro>
+      <Value><![CDATA[]]></Value>
+    </intro>
+    <link>
+      <Value><![CDATA[]]></Value>
+    </link>
+  </Properties>
 </Content>
