--- a/src/Umbraco.Cms.12.x/uSync/v9/ContentTypes/somethingelse.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/ContentTypes/somethingelse.config
@@ -15,7 +15,11 @@
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
     <Folder>%5bData%5d</Folder>
-    <Compositions />
+    <Compositions>
+      <Composition Key="0b308cde-6352-4fe0-ba6e-6fe4a8a94199">componentHeadingProperty</Composition>
+      <Composition Key="746fc21e-6f15-4310-af55-7804bed2b552">componentIntroProperty</Composition>
+      <Composition Key="52071f4a-2226-4611-b650-41bd731708d9">componentLinkProperty</Composition>
+    </Compositions>
     <DefaultTemplate></DefaultTemplate>
     <AllowedTemplates />
   </Info>
