--- a/src/Umbraco.Cms.12.x/uSync/v9/DataTypes/ContentmentContentBlocksContent.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/DataTypes/ContentmentContentBlocksContent.config
@@ -42,7 +42,7 @@
         "icon": "icon-burn color-black",
         "parentNode": "umb://document/9947dd3d9ece4cb7b955434685f8ee35",
         "nameTemplate": "{{ udi | ncNodeName }}",
-        "overlaySize": "small",
+        "overlaySize": "medium",
         "enablePreview": "0"
       }
     },
