--- a/src/Umbraco.Cms.12.x/uSync/v9/DataTypes/UmbracoContentPickerMenuItems.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/DataTypes/UmbracoContentPickerMenuItems.config
@@ -10,7 +10,7 @@
   "IgnoreUserStartNodes": false,
   "MaxNumber": 0,
   "MinNumber": 0,
-  "ShowOpen": false,
+  "ShowOpen": true,
   "TreeSource": {
     "id": null,
     "query": null,
