ContentBlocks - reusable content, even more updates

--- a/src/Umbraco.Cms.12.x/appsettings.json
+++ b/src/Umbraco.Cms.12.x/appsettings.json
@@ -28,6 +28,9 @@
                 "ContentVersionCleanupPolicy": {
                     "EnableCleanup": true
                 }
+      },
+      "WebRouting": {
+        "DisableRedirectUrlTracking": true
             }
         }
     }
