--- a/src/Umbraco.Cms.12.x/uSync/v9/Content/thing-1.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/Content/thing-1.config
@@ -14,13 +14,13 @@
   </Info>
   <Properties>
     <heading>
-      <Value><![CDATA[hello]]></Value>
+      <Value><![CDATA[This is a heading]]></Value>
     </heading>
     <image>
       <Value><![CDATA[]]></Value>
     </image>
     <intro>
-      <Value><![CDATA[<p>dsfklsdoikfk;lsdflk;d sl;kf;li</p>]]></Value>
+      <Value><![CDATA[<p>Hello world. This is an introduction.</p>]]></Value>
     </intro>
   </Properties>
 </Content>
