Minor code tidyup

--- a/src/Umbraco.Cms.10.x/uSync/v10/DataTypes/ContentmentDataListDataNumberRange.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/DataTypes/ContentmentDataListDataNumberRange.config
@@ -20,10 +20,11 @@
   ],
   "listEditor": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.RadioButtonListDataListEditor, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.ButtonsDataListEditor, Umbraco.Community.Contentment",
       "value": {
-        "showDescriptions": "1",
-        "showIcons": "1",
+        "defaultIcon": "icon-document",
+        "size": "m",
+        "labelStyle": "text",
         "allowClear": "0"
       }
     }
