--- a/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentDataListUmbracoDictionaryItems.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentDataListUmbracoDictionaryItems.config
@@ -13,7 +13,7 @@
       "value": {
         "item": [
           {
-            "id": "1",
+            "key": "6087c17e-726e-4ec6-aece-ad2bc3de6088",
             "name": "Labels"
           }
         ]
