--- a/src/Umbraco.Cms.12.x/uSync/v9/Content/thing-2.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/Content/thing-2.config
@@ -12,5 +12,15 @@
     <Schedule />
     <Template />
   </Info>
-  <Properties />
+  <Properties>
+    <heading>
+      <Value><![CDATA[]]></Value>
+    </heading>
+    <image>
+      <Value><![CDATA[]]></Value>
+    </image>
+    <intro>
+      <Value><![CDATA[]]></Value>
+    </intro>
+  </Properties>
 </Content>
