--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -36,6 +36,12 @@
     <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="11.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="node_modules\**;wwwroot\**" />
+    <EmbeddedResource Remove="node_modules\**;wwwroot\**" />
+    <None Remove="node_modules\**;wwwroot\**" />
+  </ItemGroup>
+
   <Target Name="RemoveLuceneAnalyzer" BeforeTargets="CoreCompile">
     <ItemGroup>
       <Analyzer Remove="@(Analyzer)" Condition="%(FileName) == 'Lucene.Net.CodeAnalysis.CSharp'" />
