ContentBlocks - reusable content tweaks

--- a/src/Umbraco.Cms.12.x/uSync/v9/Content/home.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/Content/home.config
@@ -56,6 +56,14 @@
     "value": {}
   },
   {
+    "elementType": "00000000-0000-0000-0000-000000000001",
+    "key": "1b4ef372-85ff-4b40-b2d9-43fd23a88622",
+    "udi": "umb://element/1b4ef37285ff4b40b2d943fd23a88622",
+    "value": {
+      "heading": "Welcome"
+    }
+  },
+  {
     "elementType": "55877ddd-640f-4d73-8b53-f8c671e8415a",
     "key": "9f93eeb1-ab4e-4c98-903c-ca1b7693b773",
     "udi": "umb://element/9f93eeb1ab4e4c98903cca1b7693b773",
