--- a/src/Umbraco.Cms.12.x/uSync/v9/Content/thing-1.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/Content/thing-1.config
@@ -17,7 +17,7 @@
       <Value><![CDATA[This is a heading]]></Value>
     </heading>
     <image>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[umb://media/0ab0cc1a6e3e4b5bbf205a4a5f0710ab]]></Value>
     </image>
     <intro>
       <Value><![CDATA[<p>Hello world. This is an introduction.</p>]]></Value>
