Upgraded uSync on v12 demo site
Updated and re-exported all schema and content.

--- a/src/Umbraco.Cms.12.x/uSync/v9/Content/home.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/Content/home.config
@@ -20,7 +20,18 @@
     "key": "9e4594dc-fa80-4a1a-8643-938791218b8a",
     "icon": "icon-navigation-bottom color-blue-grey",
     "value": {
-      "footerMenu": "[{\"name\":\"Contentment source code repository\",\"target\":\"_blank\",\"url\":\"https://github.com/leekelleher/umbraco-contentment\"},{\"name\":\"Contentment project page\",\"target\":\"_blank\",\"url\":\"https://our.umbraco.com/packages/backoffice-extensions/contentment/\"}]"
+      "footerMenu": [
+        {
+          "name": "Contentment source code repository",
+          "target": "_blank",
+          "url": "https://github.com/leekelleher/umbraco-contentment"
+        },
+        {
+          "name": "Contentment project page",
+          "target": "_blank",
+          "url": "https://our.umbraco.com/packages/backoffice-extensions/contentment/"
+        }
+      ]
     }
   }
 ]]]></Value>
@@ -46,7 +57,12 @@
     "value": {
       "heading": "Welcome",
       "intro": "<p>This is some <strong>introduction</strong> text.</p>",
-      "link": "[{\"name\":\"Click here to go to the Data List page.\",\"udi\":\"umb://document/3f755f025f6e42cca7ea4b769e3232b2\"}]"
+      "link": [
+        {
+          "name": "Click here to go to the Data List page.",
+          "udi": "umb://document/3f755f025f6e42cca7ea4b769e3232b2"
+        }
+      ]
     }
   },
   {
