--- a/src/Umbraco.Cms.12.x/uSync/v9/Content/test-content.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/Content/test-content.config
@@ -8,16 +8,19 @@
     <CreateDate>2022-09-01T18:32:23</CreateDate>
     <NodeName Default="Test - Content" />
     <SortOrder>3</SortOrder>
-    <Published Default="false" />
+    <Published Default="true" />
     <Schedule />
     <Template Key="575d2bbb-c517-4da5-afb3-4ff778c0815d">contentPage</Template>
   </Info>
   <Properties>
+    <image>
+      <Value><![CDATA[umb://media/0ab0cc1a6e3e4b5bbf205a4a5f0710ab]]></Value>
+    </image>
     <pageBlocks>
-      <Value><![CDATA[[]]]></Value>
+      <Value><![CDATA[]]></Value>
     </pageBlocks>
     <pageModules>
-      <Value><![CDATA[[]]]></Value>
+      <Value><![CDATA[]]></Value>
     </pageModules>
     <umbracoNaviHide>
       <Value><![CDATA[0]]></Value>
