--- a/src/Umbraco.Cms.12.x/uSync/v9/Content/test-misc.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/Content/test-misc.config
@@ -29,9 +29,19 @@
   }
 ]]]></Value>
     </dataListItems>
+    <dataPickerUmbracoContent>
+      <Value><![CDATA[[
+  "umb://document/b31b9022676544e795251f9aac85cc5f",
+  "umb://document/3f755f025f6e42cca7ea4b769e3232b2",
+  "umb://document/f584df3eeffe42698cf41366a03f4fff"
+]]]></Value>
+    </dataPickerUmbracoContent>
     <iconPicker>
       <Value><![CDATA[icon-science color-grey]]></Value>
     </iconPicker>
+    <iconPickerSmall>
+      <Value><![CDATA[icon-science color-black]]></Value>
+    </iconPickerSmall>
     <socialLinks>
       <Value><![CDATA[[
   {
