--- a/src/Umbraco.Cms.12.x/uSync/v9/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/ContentTypes/testmiscpage.config
@@ -40,6 +40,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>a290a9de-0b71-49b7-9572-0bf541525469</Key>
+      <Name>Data Picker - Umbraco Content</Name>
+      <Alias>dataPickerUmbracoContent</Alias>
+      <Definition>5023550b-f4ae-4e05-94c6-79abc5266c23</Definition>
+      <Type>Umbraco.Community.Contentment.DataPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>10</SortOrder>
+      <Tab Alias="dataPicker">Data Picker</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>0ec1844a-2609-41af-a23c-e785fdef96e5</Key>
       <Name>Icon Picker</Name>
       <Alias>iconPicker</Alias>
@@ -166,6 +182,13 @@
       <Alias>socialLinks</Alias>
       <Type>Tab</Type>
       <SortOrder>-50</SortOrder>
+    </Tab>
+    <Tab>
+      <Key>d08808c6-3be8-454b-a646-67c2e30ff2c8</Key>
+      <Caption>Data Picker</Caption>
+      <Alias>dataPicker</Alias>
+      <Type>Tab</Type>
+      <SortOrder>-60</SortOrder>
     </Tab>
     <Tab>
       <Key>e1176c1d-7a9b-4cb7-b9f3-4b54e726573f</Key>
