--- a/src/Umbraco.Cms.12.x/Umbraco.Cms.12.x.csproj
+++ b/src/Umbraco.Cms.12.x/Umbraco.Cms.12.x.csproj
@@ -10,8 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Umbraco.Cms" Version="12.0.0-rc2" />
-        <PackageReference Include="uSync" Version="11.2.0" />
+        <PackageReference Include="Umbraco.Cms" Version="12.0.0" />
+        <PackageReference Include="uSync" Version="12.2.0" />
         <ProjectReference Include="..\Umbraco.Community.Contentment\Umbraco.Community.Contentment.csproj" />
     </ItemGroup>
 
