--- a/src/Umbraco.Cms.12.x/uSync/v9/ContentTypes/contentpage.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/ContentTypes/contentpage.config
@@ -17,6 +17,7 @@
     <Folder>Pages</Folder>
     <Compositions>
       <Composition Key="189438e2-a3e1-4e2f-aa4b-3f4179c3889e">pageBlocksProperty</Composition>
+      <Composition Key="f2e98428-2f70-43d3-a597-32ac494a0ded">pageImageProperty</Composition>
       <Composition Key="e5694cca-22c5-4b9f-a10a-0a4d315c7a7d">pageModulesProperty</Composition>
       <Composition Key="e6be904d-d5e5-4367-90e0-b6ad1a121168">pageNavigationUrlNameProperty</Composition>
       <Composition Key="0fb17206-c09d-4485-929d-38ca2fa8a34f">pageNavigationVisibilityProperty</Composition>
