--- a/src/Umbraco.Cms.12.x/uSync/v9/Domains/_en-us.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/Domains/_en-us.config
@@ -4,5 +4,6 @@
     <IsWildcard>false</IsWildcard>
     <Language>en-US</Language>
     <Root Key="7c6bcf13-fa7d-4949-b975-ffb331ee0dcc">/Contentment/Home</Root>
+    <SortOrder>1</SortOrder>
   </Info>
 </Domain>
