--- a/src/Umbraco.Cms.10.x/uSync/v10/DataTypes/ContentmentDataPickerUmbracoContent.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/DataTypes/ContentmentDataPickerUmbracoContent.config
@@ -11,7 +11,8 @@
     {
       "key": "Umbraco.Community.Contentment.DataEditors.UmbracoContentDataListSource, Umbraco.Community.Contentment",
       "value": {
-        "parentNode": "umb://document/7c6bcf13fa7d4949b975ffb331ee0dcc"
+        "parentNode": "umb://document/7c6bcf13fa7d4949b975ffb331ee0dcc",
+        "sortAlphabetically": "1"
       }
     }
   ],
