--- a/src/Umbraco.Cms.12.x/uSync/v9/DataTypes/ContentmentDataListUmbracoContent.config
+++ b/src/Umbraco.Cms.12.x/uSync/v9/DataTypes/ContentmentDataListUmbracoContent.config
@@ -11,7 +11,8 @@
     {
       "key": "Umbraco.Community.Contentment.DataEditors.UmbracoContentDataListSource, Umbraco.Community.Contentment",
       "value": {
-        "parentNode": "umb://document/9772aed63d82474e9269f7f4c5504992"
+        "parentNode": "umb://document/9772aed63d82474e9269f7f4c5504992",
+        "sortAlphabetically": "0"
       }
     }
   ],
