--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -57,8 +57,8 @@
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
-        <PackageReference Include="Umbraco.Cms.Web.Website" Version="13.0.0--rc.preview.26.g06272d9" />
-        <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="13.0.0--rc.preview.26.g06272d9" />
+        <PackageReference Include="Umbraco.Cms.Web.Website" Version="13.0.0--rc.preview.28.g42bc50e" />
+        <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="13.0.0--rc.preview.28.g42bc50e" />
     </ItemGroup>
 
     <Target Name="RemoveLuceneAnalyzer" BeforeTargets="CoreCompile">
