--- a/src/Umbraco.Community.Contentment/package.json
+++ b/src/Umbraco.Community.Contentment/package.json
@@ -12,7 +12,7 @@
         "lit": "^2.7.6"
     },
     "devDependencies": {
-        "@umbraco-cms/backoffice": "^14.0.0-709b3cbf",
+        "@umbraco-cms/backoffice": "^14.0.0--preview003",
         "typescript": "^5.0.2",
         "vite": "^4.4.5"
     }
