Updated ignore rules for Smidge cache files

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ src/Umbraco.Cms.*.x/appsettings-schema.Umbraco.Cms.json
 src/Umbraco.Cms.*.x/umbraco-package-schema.json
 src/Umbraco.Cms.8.x/App_Data/*
 src/Umbraco.Cms.*.x/App_Plugins/*/**
+src/Umbraco.Cms.*.x/Smidge/Cache/*
 src/Umbraco.Cms.8.x/Umbraco/*
 src/Umbraco.Cms.*.x/[Uu]mbraco/Data/*
 src/Umbraco.Cms.*.x/[Uu]mbraco/Logs/*
