--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -150,8 +150,8 @@ csharp_style_var_when_type_is_apparent = true:warning
 csharp_style_var_elsewhere = true:suggestion
 # Expression-bodied members
 # https://docs.microsoft.com/visualstudio/ide/editorconfig-language-conventions#expression-bodied-members
-csharp_style_expression_bodied_methods = true:suggestion
-csharp_style_expression_bodied_constructors = true:suggestion
+csharp_style_expression_bodied_methods = true:silent
+csharp_style_expression_bodied_constructors = true:silent
 csharp_style_expression_bodied_operators = true:suggestion
 csharp_style_expression_bodied_properties = true:suggestion
 csharp_style_expression_bodied_indexers = true:suggestion
@@ -252,6 +252,7 @@ csharp_preserve_single_line_blocks = true
 
 [*.{cs,csx,cake,vb,vbx}]
 dotnet_diagnostic.CS1591.severity = suggestion
+dotnet_diagnostic.IDE1006.severity = suggestion
 
 ##########################################
 # Styles
