:bug: Updated bug report template

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: "Bug report"
 description: "File a bug report to help us improve."
-labels: "bug-report"
+labels: ["bug-report"]
 assignees:
   - leekelleher
 body:
@@ -18,7 +18,7 @@ body:
 - type: input
   id: "umbracoVersion"
   attributes:
-    label: "Which Umbraco version are you using? For example: 8.14.1 - don't just write v8"
+    label: "Which Umbraco version are you using? For example: 10.3.2 - don't just write v10"
     description: "Use the help icon in the Umbraco backoffice to find the version you're using."
   validations:
     required: true
@@ -26,29 +26,31 @@ body:
   id: "summary"
   attributes:
     label: "Bug summary"
-    description: "Write a summary of the bug."
-    description: "Remember that you can format code and logs nicely with the `<>` button"
+    description: "Write a summary of the bug. Remember that you can format code and logs nicely with the `<>` button"
     placeholder: >
+      
       Try to pinpoint it as much as possible.
       
       Try to state the actual problem, and not just what you think the solution might be.
   validations:
     required: true
 - type: textarea
+  id: "reproduction"
   attributes:
     label: "Steps to reproduce"
-    id: "reproduction"
     description: "How can we reproduce the problem on a clean Contentment + Umbraco install?"
     placeholder: >
+      
       Please include any links, screenshots, stack-traces, etc.
   validations:
     required: true
 - type: textarea
+  id: "result"
   attributes:
     label: "Expected result / actual result"
-    id: "result"
     description: "What did you expect that would happen on your Umbraco site and what is the actual result of the above steps?"
     placeholder: >
+      
       Describe the intended/desired outcome after you did the steps mentioned.
       
       Describe the behaviour of the bug
